force-app/main/default/objects/DocuSign_Recipient__c/DocuSign_Recipient__c.object-meta.xml
<CustomObject>
    <description>This object act as a junction object between User object and Signing Groups object</description>
    <label>DocuSign Recipient</label>
    <nameField>
        <displayFormat>RECIPIENTS-{0000}</displayFormat>
        <label>DocuSign Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>