force-app/main/default/objects/DocuSign_Recipient__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <formula>User__r.FirstName + &apos; &apos; + User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Name</label>
    <type>Text</type>
</CustomField>