force-app/main/default/objects/DocuSign_Recipient__c/fields/Signing_Group__c.field-meta.xml
<CustomField>
    <fullName>Signing_Group__c</fullName>
    <label>Signing Group</label>
    <referenceTo>Signing_Group__c</referenceTo>
    <relationshipLabel>DocuSign Recipients</relationshipLabel>
    <relationshipName>DocuSign_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>