force-app/main/default/objects/DocuSign_Recipient__c/fields/Signing_Role__c.field-meta.xml
<CustomField>
    <fullName>Signing_Role__c</fullName>
    <label>Signing Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Signing_Role</valueSetName>
    </valueSet>
</CustomField>