force-app/main/default/objects/DocuSign_Recipient__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Signing_Group_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>